Edit details display in form, Croppie js [Fixes]

--- a/public/stylesheets/components.css
+++ b/public/stylesheets/components.css
@@ -76,13 +76,13 @@ h3, h4, h5, h6, p, span, body {
     box-shadow: 0 8px 8px rgb(63, 63, 63);
 }
 
-#image_demo, .cr-boundary {
+.image_demo, .cr-boundary {
     width: 100% !important;
     margin: 0 !important;
     padding: 0 !important;
 }
 
-#crop-btn{
+.crop-btn{
     width: 100%;
 }
 
